crates/oxidd-derive/tests/countable/enum_zero_variants.rs
use oxidd_derive::Countable;

#[derive(Countable)]
enum Tag {}

fn main() {}
